[refactor] Improve and extend layers: model, repository, service, and util
Enhanced guess validation and word loading, extended the exception handling, and improved the documentation across the layers.